--- a/app/src/main/res/layout/activity_new_match.xml
+++ b/app/src/main/res/layout/activity_new_match.xml
@@ -59,30 +59,48 @@
                     android:orientation="vertical"
                     android:baselineAligned="false"
                     android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/new.match.field.price"
+                    
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:drawablePadding="@dimen/text_drawable_space_between"
-                        android:drawableStart="@drawable/ic_editor_attach_money"
-                        android:drawableLeft="@drawable/ic_editor_attach_money"
-                        android:textSize="17sp" />
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/new.match.field.capacity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:drawablePadding="@dimen/text_drawable_space_between"
-                        android:drawableStart="@drawable/ic_social_group"
-                        android:drawableLeft="@drawable/ic_social_group"
-                        android:textSize="17sp" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/soccer_field_details"
+                            android:textSize="16sp" />
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/light_gray"
+                            android:layout_marginTop="3dp"
+                            android:layout_marginBottom="@dimen/text_drawable_space_between"/>
+
+                        <TextView
+                            android:id="@+id/new.match.field.price"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:drawablePadding="@dimen/text_drawable_space_between"
+                            android:drawableStart="@drawable/ic_editor_attach_money"
+                            android:drawableLeft="@drawable/ic_editor_attach_money"
+                            android:textSize="17sp" />
+
+                        <TextView
+                            android:id="@+id/new.match.field.capacity"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:drawablePadding="@dimen/text_drawable_space_between"
+                            android:drawableStart="@drawable/ic_social_group"
+                            android:drawableLeft="@drawable/ic_social_group"
+                            android:textSize="17sp" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/new.match.field.phone.number"
@@ -101,7 +119,9 @@
                             android:padding="5dp"
                             android:contentDescription="@null"
                             android:src="@drawable/ic_communication_call"/>
+
                     </RelativeLayout>
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
