--- a/app/src/main/res/layout/match_list_item.xml
+++ b/app/src/main/res/layout/match_list_item.xml
@@ -10,22 +10,24 @@
     android:paddingBottom="10dp">
 
     <ImageView
-        android:id="@+id/match.confirmation.status"
+        android:id="@+id/match.icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:contentDescription="@null"/>
+        android:src="@mipmap/ic_launcher"
+        android:contentDescription="@null"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/match.confirmation.status"
-        android:layout_toEndOf="@+id/match.confirmation.status"
-        android:layout_toStartOf="@+id/match.confirmations"
-        android:layout_toLeftOf="@+id/match.confirmations"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_toRightOf="@+id/match.icon"
+        android:layout_toEndOf="@+id/match.icon"
+        android:layout_toLeftOf="@+id/match.icons.wrapper"
+        android:layout_toStartOf="@+id/match.icons.wrapper">
 
         <TextView
             android:id="@+id/match.soccer.field"
@@ -55,11 +57,26 @@
             android:ellipsize="end" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/match.confirmations"
+    <RelativeLayout
+        android:id="@+id/match.icons.wrapper"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+        <TextView
+            android:id="@+id/match.confirmations"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"/>
+
+        <ImageView
+            android:id="@+id/match.confirmation.status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:contentDescription="@null"/>
+    </RelativeLayout>
+
 </RelativeLayout>
