--- a/app/src/main/res/layout/activity_new_match.xml
+++ b/app/src/main/res/layout/activity_new_match.xml
@@ -78,49 +78,60 @@
                             android:layout_marginTop="3dp"
                             android:layout_marginBottom="@dimen/text_drawable_space_between"/>
 
-                        <TextView
-                            android:id="@+id/new.match.field.price"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:drawablePadding="@dimen/text_drawable_space_between"
-                            android:drawableStart="@drawable/ic_editor_attach_money"
-                            android:drawableLeft="@drawable/ic_editor_attach_money"
-                            android:textSize="17sp" />
+                            android:orientation="vertical"
+                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                            android:layout_marginStart="@dimen/activity_horizontal_margin">
 
-                        <TextView
-                            android:id="@+id/new.match.field.capacity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:drawablePadding="@dimen/text_drawable_space_between"
-                            android:drawableStart="@drawable/ic_social_group"
-                            android:drawableLeft="@drawable/ic_social_group"
-                            android:textSize="17sp" />
+                            <TextView
+                                android:id="@+id/new.match.field.price"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:drawablePadding="@dimen/text_drawable_space_between"
+                                android:drawableStart="@drawable/ic_editor_attach_money"
+                                android:drawableLeft="@drawable/ic_editor_attach_money"
+                                android:layout_marginBottom="@dimen/text_drawable_space_between"
+                                android:textSize="17sp" />
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/new.match.field.capacity"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:drawablePadding="@dimen/text_drawable_space_between"
+                                android:drawableStart="@drawable/ic_social_group"
+                                android:drawableLeft="@drawable/ic_social_group"
+                                android:layout_marginBottom="@dimen/text_drawable_space_between"
+                                android:textSize="17sp" />
 
-                        <TextView
-                            android:id="@+id/new.match.field.phone.number"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:textSize="17sp" />
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:id="@+id/new.match.field.phone.call"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:padding="5dp"
-                            android:contentDescription="@null"
-                            android:src="@drawable/ic_communication_call"/>
+                                <TextView
+                                    android:id="@+id/new.match.field.phone.number"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:textSize="17sp" />
 
-                    </RelativeLayout>
+                                <ImageView
+                                    android:id="@+id/new.match.field.phone.call"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_centerVertical="true"
+                                    android:padding="5dp"
+                                    android:contentDescription="@null"
+                                    android:src="@drawable/ic_communication_call"/>
+
+                            </RelativeLayout>
+                        </LinearLayout>
+
                     </LinearLayout>
                 </LinearLayout>
 
